// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeFormField > should render successfully when the user is signed in 1`] = `
<div>
  <div
    class="css-1cimf61"
  >
    <img
      alt="TypeForm Logo"
      class="css-1ngw63v"
      src="/src/Field/typeform-icon.svg"
    />
    <div
      class="css-1jmxdak"
    >
      <select
        class="css-1g6ytnc"
        data-test-id="cf-ui-select"
      >
        <option
          data-test-id="cf-ui-select-option"
          value=""
        >
          Choose a typeform
        </option>
        <option
          data-test-id="cf-ui-select-option"
          value="https://user.typeform.com/to/dsako"
        >
          Customer Feedback Survey (copy)
        </option>
        <option
          data-test-id="cf-ui-select-option"
          value="https://user.typeform.com/to/sjao"
        >
          Personality Quiz - Quick Start - FINAL (copy)
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="css-14n9xrq"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </div>
  </div>
  <article
    class="css-ep96ao"
    data-test-id="cf-ui-note"
  >
    <svg
      aria-hidden="true"
      class="css-t1jt9x"
      data-test-id="cf-ui-icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    <div
      class="css-j7qwjs"
    >
      <div
        class="css-1lh0ubj"
      >
        The typeform you have selected in Contentful no longer exists in your workspace.
         
        <a
          class="css-1ulo0xy"
          data-test-id="cf-ui-text-link"
        >
          <span
            class="css-x1sij0"
          >
            <span>
              Clear field
            </span>
          </span>
        </a>
        .
      </div>
    </div>
  </article>
</div>
`;

exports[`TypeFormField > should render the auth button when the user is not authenticated 1`] = `
<div>
  <button
    aria-label="typeform-auth"
    class="css-127ixdm"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="css-40g50j"
    >
      Sign in to Typeform
    </span>
  </button>
</div>
`;

exports[`TypeFormField > should render the error screen if something goes wrong 1`] = `
<div>
  <article
    class="css-ep96ao"
    data-test-id="cf-ui-note"
  >
    <svg
      aria-hidden="true"
      class="css-t1jt9x"
      data-test-id="cf-ui-icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    <div
      class="css-j7qwjs"
    >
      <div
        class="css-1lh0ubj"
      >
        <p
          class="css-13j6071"
          data-test-id="cf-ui-paragraph"
        >
          We could not fetch your typeforms. Please make sure you have selected a valid Typeform workspace and are logged in.
        </p>
      </div>
    </div>
  </article>
</div>
`;
